# multisensoryprocessing

./: .gitignore  Makefile  README.md  checklist  setup.py
NLG/: accuse.prompts  agreed.prompts  all.prompts  defend.prompts  game.prompts  support.prompts  support.user.prompts  villagers.prompts  werewolf.prompts
audio/: snapshot.tmss  snapshot2.tmss  snapshot3.tmss  snapshot5.tmss  snapshot6.tmss  workspace.tmws  workspace2.tmws  workspace3.tmws
bat/: asr.bat  featureprocessor.bat  mic.bat  mocapgazeprocessor.bat  mocappreprocessor.bat  mocapsensor.bat  run.bat  run_asr.bat  run_feature.bat  run_mocapgaze.bat  run_tobiimocap.bat  tobiipreprocessor.bat
examples/: directory_service.py  receiver.py  sender.py
farmi/: __init__.py  direcory_service.py  directory_service.py  farmi.py  farmi_file.py  farmi_unit.py  publisher.py  serialization.py  subscriber.py  utils.py
logs/: attention_table_0.csv  attention_table_1.csv  attention_table_2.csv  attention_table_3.csv  feature_log.csv  furhat_log.csv  furhatlog.csv  label_sequence.csv
matlab/: amatch.m  assemble_tobii_data.m  bin2interv.m  calc_angle.m  calc_cameramatrix.m  calc_norm.m  calc_unit.m  clamp_magnitude.m  extract_all_rigidbodymarkers.m  extract_markerdata.m  extract_rigidbodydata.m  gazehits.m  gazehits.m~  gazehitsapp.m  get_starttime.m  matrix2points.m  mocap_smooth.m  mocapgaze.m  mocapwrite_trc.m  parse_tobii.m  sync_gaze_and_mocap.m  tobii.m  world2localspace.m
sh/: asr.sh  (+13 more)
src/main/c++/pre_processors/facial_features/: CMakeLists.txt  facial_features
src/main/c++/pre_processors/facial_features/cmake/Modules/: FindAMQP.cmake
(+288 files in other folders)
